Added the home routes controller
