# routes/profileRoutes.js
@@ -4,7 +4,7 @@ const profileController = require('../controllers/profileController');
 const authMiddleware = require('../middleware/authMiddleware');
 
 router.get('/', authMiddleware.authenticateToken, profileController.getProfile);
-router.put('/', authMiddleware.authenticateToken, profileController.updateProfile);
+router.put('/update-user', authMiddleware.authenticateToken, profileController.updateProfile);
 router.put('/change-password', authMiddleware.authenticateToken, profileController.changePassword);
 
 module.exports = router;
